--- a/package.json
+++ b/package.json
@@ -1,10 +1,21 @@
 {
   "name": "client-thread-js",
-  "version": "1.0.5-alpha",
+  "version": "1.0.5-alpha-fix",
   "description": "A library to use muti-threading in the browser.",
   "main": "dist/thread.min.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-contrib-concat": "^0.5.0",
+    "grunt-contrib-jshint": "^0.10.0",
+    "grunt-contrib-uglify": "^0.5.1",
+    "grunt-contrib-watch": "^0.6.1"
+  },
+  "scripts": {
+    "build": "npm install && grunt",
+    "test": "grunt linted-build"
   },
   "repository": {
     "type": "git",
