--- a/package.json
+++ b/package.json
@@ -4,18 +4,19 @@
   "description": "A library to use muti-threading in the browser.",
   "main": "dist/thread.min.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "npm install && grunt",
+    "test": "grunt linted-build"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-contrib-concat": "^0.5.0",
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-contrib-uglify": "^0.5.1",
-    "grunt-contrib-watch": "^0.6.1"
-  },
-  "scripts": {
-    "build": "npm install && grunt",
-    "test": "grunt linted-build"
+    "grunt-contrib-watch": "^0.6.1",
+    "gulp": "^3.8.11",
+    "gulp-uglify": "^1.2.0",
+    "gulp-util": "^3.0.4",
+    "gulp-watch": "^4.2.4"
   },
   "repository": {
     "type": "git",
