--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "grunt-contrib-uglify": "^0.5.1",
     "grunt-contrib-watch": "^0.6.1",
     "gulp": "^3.8.11",
+    "gulp-typescript": "^2.7.4",
     "gulp-uglify": "^1.2.0",
     "gulp-util": "^3.0.4",
     "gulp-watch": "^4.2.4"
