--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "client-thread-js",
-  "version": "1.1.0-alpha",
-  "description": "A library to use muti-threading in the browser.",
+  "version": "2.0.0",
+  "description": "A library to use muti-threading in the browser with ease.",
   "main": "dist/thread.min.js",
   "scripts": {
     "build": "npm install && grunt",
@@ -13,6 +13,7 @@
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-contrib-uglify": "^0.5.1",
     "grunt-contrib-watch": "^0.6.1",
+    "grunt-ts": "^4.1.0",
     "gulp": "^3.8.11",
     "gulp-typescript": "^2.7.4",
     "gulp-uglify": "^1.2.0",
@@ -26,7 +27,7 @@
   "keywords": [
     "clientside",
     "multi-threading",
-    "uitl",
+    "util",
     "dependency",
     "library"
   ],
